--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,6 +4,10 @@ layout: archive
 
 {{ content }}
 
+{% assign welcome = site.pages | where: 'name','welcome.md' %}
+{{welcome}}
+
+
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
 
 {% if paginator %}
