modifying full-wide

--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -569,21 +569,19 @@ body {
     float: left;
     width: 100%;
     @include breakpoint($large) {
-      padding-left: 0;
+      padding-inline-end: 0;
     }
 
     @include breakpoint($x-large) {
-      padding-left: 0;
+      padding-inline-end: 0;
     }
   }
+  
+  @include breakpoint($large) {
+    padding-inline-end: 0;
+  }
 
-  .page__related {
-    @include breakpoint($large) {
-      padding-left: 0;
-    }
-
-    @include breakpoint($x-large) {
-      padding-left: 0;
-    }
+  @include breakpoint($x-large) {
+    padding-inline-end: 0;
   }
 }
